# Lucy-API

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build_image.yml  deploy-by-tag.yml  deploy.yml  quality.yaml  rollback.yml
apps/_auth/: apps.py  tests.py  urls.py  views.py
apps/api/: admin.py  gossiper.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/api/migrations/: 0001_initial.py  0002_guild_updated_at_guild_version_alter_guild_lang.py  0003_language_remove_guild_name_alter_guild_lang.py
apps/discord/: admin.py  models.py  tests.py  urls.py  views.py
apps/discord/migrations/: 0001_initial.py
docs/: onboarding.md  runbook.md  troubleshooting.md  virtual-env.md
docs/adr/: 0001-api-conventions.md
project/: config.py  settings.py  tests.py  urls.py
utils/: logger.py  tests.py
